Revert "fix: show header icons on hover and wrap the whole headers in links (…"
This reverts commit 33e9b5a0e2e54d3604bc41c1c91a9bd7570386a8.

--- a/src/styles/_includes/type.scss
+++ b/src/styles/_includes/type.scss
@@ -6,6 +6,10 @@
   h5,
   h6 {
     position: relative;
+
+    &:hover .anchor {
+      opacity: 1;
+    }
   }
 
   h2:not(:first-child) {
@@ -17,29 +21,38 @@
     border-top: 1px solid $border-color;
   }
 
-  .anchor {
-    color: $desatPurple1;
-    &:hover {
-      text-decoration: none;
-      .anchor-icon {
-        color: $brandPink;
-        opacity: 1;
-      }
-    }
-  }
-
-  .anchor-icon {
+  .anchor,
+  .anchor.before {
+    $anchor-size: 22px;
     $icon-size: 12px;
-    width: $icon-size;
-    height: $icon-size;
     display: flex;
     align-items: center;
     justify-content: center;
     position: absolute;
-    top: 26%;
-    margin-left: -16px;
+    top: 0;
+    bottom: 0;
+    width: $anchor-size;
+    margin-left: -$anchor-size;
+
     opacity: 0;
     transition: opacity 150ms linear;
+
+    // Visual alignment
+    transform: translateY(-1px);
+
+    // overload for gatsby-remark-autolink-headers
+    padding: 0;
+
+    &:hover {
+      text-decoration: none;
+      opacity: 1;
+    }
+
+    svg {
+      display: block;
+      width: $icon-size;
+      height: $icon-size;
+    }
   }
 
   // only used for gifs. Other images are overridden by gatsby-remark-images
